# ado-review-lens

./: .env.example  .gitignore  README.md  Requirement.md  pyproject.toml  server.json
.github/workflows/: ci.yml
scripts/: publish.sh
src/ado_review_lens/: api.py  azure.py  cli.py  config.py  errors.py  models.py  resolver.py  server.py  service.py
tests/: test_resolver.py
