[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ado-review-lens"
version = "0.1.1"
description = "Azure DevOps PR comment MCP"
authors = [{ name = "AdoReviewLens" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "typer>=0.9",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "mcp>=0.3.0",
    "python-dotenv>=1.0"
]

[project.scripts]
mcp = "ado_review_lens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
